[package]
name = "rust_code"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.1"
ssh2 = "0.9.5"
dotenv = "0.15.0"
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
    "runtime-async-std",
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "ipnetwork",
    "uuid",
    "chrono",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.44.1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.11.13", features = ["json"] }
